# PyXAPI

./: INSTALL.txt  MANIFEST.in  Makefile.in  PKG-INFO  README.txt  configure  configure.ac  pyxapi.h.in  rfc3542.py  setup.py  setup.py.in  socket_ext.py
Include/: socketmodule.h
Modules/: rfc3542.c  socket_ext.c
Test/: README.txt  inet6_opt.py  inet6_rth_recv.py  inet6_rth_send.py  one_ping6.py
